@@ -1,3 +1,11 @@
+2003-03-25  Russ Allbery  <rra@stanford.edu>
+
+	* ANSIColor.pm: Version 1.07 released.
+
+	* ANSIColor.pm: Add PuTTY, Windows telnet, and Cygwin OpenSSH
+	information to the terminal emulators table, and update the URL to
+	the ECMA standard.
+
 2002-12-09  Russ Allbery  <rra@stanford.edu>
 
 	* ANSIColor.pm: Version 1.06 released to synchronize the version
